--- a/src/components/HomepageFeatures/styles.module.css
+++ b/src/components/HomepageFeatures/styles.module.css
@@ -9,3 +9,21 @@
   height: 200px;
   width: 200px;
 }
+
+.button {
+  font-size: 1rem;
+  background-color: #2e8555;
+  color: white;
+  padding: 15px 25px;
+  border-radius: 5px;
+  outline: 0;
+  border: 0;
+  text-transform: uppercase;
+  margin: 10px 0px;
+  cursor: pointer;
+  transition: ease background-color 250ms;
+
+  &:hover {
+    background-color: #3f3d56;
+  }
+}
